--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
 
     <section class="bg-white dark:bg-gray-900">
         <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
-            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">About CFE Main Website</h1>
-            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">Learn more about our company, our mission, and our commitment to delivering innovative solutions.</p>
+            <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">About Us</h1>
+            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">We are doing some cool work. Learn more about our company, our mission, and our commitment to delivering innovative solutions.</p>
             <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
                     Our Team
@@ -61,8 +61,8 @@
     </section>
 
     <div class="container mx-auto mt-8 p-4">
-        <h1 class="text-4xl font-bold mb-4">About CFE Main Website</h1>
-        <p class="text-lg">Learn more about our company and our mission.</p>
+        <h1 class="text-4xl font-bold mb-4">About Us</h1>
+        <p class="text-lg">We are doing some cool work. Learn more about our company and our mission.</p>
     </div>
 
     <!-- Update Flowbite JavaScript CDN link at the end of the body -->
